--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "dev": "parcel ./demo/index.html",
     "build": "rm -rf ./dist && tsc",
     "prettier": "prettier '@(src|demo)/**/*.@(ts|tsx|html|less)' --write",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -45,7 +46,10 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.7",
     "husky": "^1.2.0",
+    "less": "^3.9.0",
     "lint-staged": "^8.1.0",
+    "normalize.css": "^8.0.1",
+    "parcel-bundler": "^1.10.3",
     "prettier": "1.15.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
