--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "parcel ./demo/index.html",
+    "build:demo": "parcel build ./demo/index.html --out-dir ./demo/dist --public-url ./",
     "build": "rm -rf ./dist && tsc",
     "prettier": "prettier '@(src|demo)/**/*.@(ts|tsx|html|less)' --write",
     "test": "echo \"Error: no test specified\" && exit 1"
