--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.115",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.7",
     "husky": "^1.2.0",
@@ -51,6 +50,7 @@
     "lint-staged": "^8.1.0",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.10.3",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "prettier": "1.15.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -62,7 +62,6 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
     "rxjs": "^6.3.3"
   },
   "peerDependencies": {
