--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:demo": "parcel build ./demo/index.html --out-dir ./demo/dist --public-url ./",
     "build": "rm -rf ./dist && tsc",
     "prettier": "prettier '@(src|demo)/**/*.@(ts|tsx|html|less)' --write",
+    "lint": "tslint -p tsconfig.json --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
