--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel ./demo/index.html",
     "build:demo": "parcel build ./demo/index.html --out-dir ./demo/dist --public-url ./",
-    "build": "rm -rf ./dist && tsc",
+    "build": "rm -rf ./dist && tsc -p ./tsconfig.build.json",
     "prettier": "prettier '@(src|demo)/**/*.@(ts|tsx|html|less)' --write",
     "lint": "tslint -p tsconfig.json --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
