--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.4",
+    "@emotion/styled": "^10.0.4",
     "rxjs": "^6.3.3"
   },
   "peerDependencies": {
