--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "parcel ./demo/index.html",
-    "build:demo": "parcel build ./demo/index.html --out-dir ./demo/dist --public-url ./",
+    "build:demo": "rm -rf ./demo/dist/* && parcel build ./demo/index.html --out-dir ./demo/dist --public-url ./",
     "build": "rm -rf ./dist && tsc -p ./tsconfig.build.json",
     "prettier": "prettier '@(src|demo)/**/*.@(ts|tsx|html|less)' --write",
     "lint": "tslint -p tsconfig.json --fix",
